# LRT_forward_trajectory_controller

./: CMakeLists.txt  README.md  joint_trajectory_plugin.xml  package.xml
debugScripts/: trajectoryVisualizer.py
include/joint_forward_trajectory_controller/: interpolation_methods.hpp  joint_forward_trajectory_controller.hpp  trajectory.hpp  validate_jtc_parameters.hpp  visibility_control.h
include/joint_trajectory_controller/: joint_trajectory_controller.hpp  trajectory.hpp  validate_jtc_parameters.hpp
src/: joint_forward_trajectory_controller.cpp  joint_forward_trajectory_controller_parameters.yaml  joint_trajectory_controller.cpp  joint_trajectory_controller_parameters.yaml  trajectory.cpp
test/: test_forward_trajectory.cpp  test_simple_tests.cpp  test_trajectory_controller_utils.hpp
